2007-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	'start.vertex', 'significance', 'estind', 'estage', 'number'
	arguments removed, 'norm.method' added
	(measure.dynamics.idage) : 'start.vertex', 'significance',
	'estind', 'estage', 'number' arguments removec, 'norm.method'
	added
	(measure.dynamics.citedcat.id.age) : 'number' argument removed
	(measure.dynamics.citingcat.id.age) : 'number' argument removed
	(measure.dynamics.d.d) : 'sd' and 'no' arguments removed
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id)
	(R_igraph_measure_dynamics_idwindow)
	(R_igraph_measure_dynamics_idage)
	(R_igraph_measure_dynamics_citedcat_id_age)
	(R_igraph_mesaure_dynamics_citingcat_id_age)
	(R_igraph_measure_dynamics_d_d) : updated
	(R_igrpah_measure_dynamics_idage_debug) : removed
	

2007-03-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : 'arrow.mode' argument added
	* interfaces/R/igraph/R/plot.common.R (i.get.arrow.mode) : added

2007-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (lastcit.game) : added
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.lastcit) : added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_lastcit)
	(R_igraph_measure_dynamics_lastcit_st, R_igraph_lastcit_game) : added

	* interfaces/R/igraph/R/games.R (lastcit.game) : added 'directed' argument
	* interfaces/R/src/rinterface.c (R_igraph_lastcit_game) : 'directed' arg. added
	
2007-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R 
	(mesasure.dynamics.citingcat.id.age, measure.dynamics.citedcat.id.age) :
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat_id_age)
	(R_igraph_measure_dynamics_citingcat_id_age) : 	standard deviation 
	calculation corrected 	

2007-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (alpha.centrality) : 